# iARAP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  path_config.h.in
data/: cube5.msh
include/: ARAP.h  Ground.h  IPC.h  Optimizer.h  common.h  mesh.h  parameters.h  quartic.h
src/: Ground.cpp  Optimizer.cpp  mesh.cpp  quartic.cpp
